--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Akash Neil</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body>
 
+		<!-- Header -->
+			<header id="header" class="alt">
+				<div class="logo">
+				</div>
+			</header>		
+
+		<!-- Banner -->
+			<section class="banner full">
+				<article>
+					<img src="images/alQasr.jpg" alt="" />
+					<div class="inner">
+						<header>
+							<p> 
+								<strong>
+									Software Craftsman
+								</strong>
+							</p>
+							<h2>
+								<a href="" target="_blank">
+									AKASH NEIL
+								</a>
+							</h2>
+						</header>
+					</div>
+				</article>
+			</section>
+
+		<!-- Footer -->
+
+			<footer id="footer">
+				<div class="container">
+					<ul class="icons">
+						<li>
+							<a href="" class="icon fa-github" target="_blank"><span class="label">CV</span></a>
+							&nbsp;
+							<!--<a href="" class="icon fa-twitter" target="_blank"><span class="label">CV</span></a>
+							&nbsp;
+							<a href="" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a>
+							&nbsp;-->
+							<a href="" class="icon fa-at"><span class="label">Email</span></a>
+						</li>
+					</ul>
+
+				</div>
+				<div class="copyright">
+					&copy; Akash Neil. All rights reserved.
+				</div>
+			</footer>
+		
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
