--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/alQasr.jpg" alt="" />
+					<!--<img src="images/alQasr.jpg" alt="" />-->
 					<div class="inner">
 						<header>
 							<p> 
