--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 				<div class="container">
 					<ul class="icons">
 						<li>
-							<a href="" class="icon fa-github" target="_blank"><span class="label">CV</span></a>
+							<a href="https://github.com/AkashNeil" class="icon fa-github" target="_blank"><span class="label">CV</span></a>
 							&nbsp;
 							<!--<a href="" class="icon fa-twitter" target="_blank"><span class="label">CV</span></a>
 							&nbsp;
 							<a href="" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a>
 							&nbsp;-->
-							<a href="" class="icon fa-at"><span class="label">Email</span></a>
+							<a href="mailto:akashneil@live.com" class="icon fa-at"><span class="label">Email</span></a>
 						</li>
 					</ul>
 
